--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             </nav>
             <div>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#Home">Home</a></li>
+                    <li><a href="#About">About</a></li>
                 </ul>
             </div>
         </header>
