--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
             this is footer content
         </footer>
 
-        <script src="./Scripts/route.js"></script>
-        <script src="./Scripts/router.js"></script>
-        <script src="./Scripts/app.js"></script>
+        <!-- <script src="./Scripts/route.js"></script> -->
+        <!-- <script src="./Scripts/router.js"></script> -->
+        <script type="module" src="./Scripts/routeModule.js"></script>
+        <script type="module" src="./app.js"></script>
 </body>
 </html>
